Removed legacy options from delegate-environment-variables.md and a bit of cleanup